# ev-charger

./: Cargo.toml  DEVELOPMENT.md  README.md
assets/images/: README.md
src/: app.rs  config.rs  error.rs  infrastructure.rs  lib.rs  main.rs  prelude.rs  router.rs  types.rs  ui.rs
src/domain/: charging.rs
src/infrastructure/: communication.rs  ocpp.rs
src/layout/: app_bar.rs  app_container.rs  mod.rs  shadow_button.rs  stepper.rs  top_bar.rs
src/screen/: charging_screen.rs  complete_screen.rs  connect_screen.rs  full_charge_screen.rs  mod.rs  payment_screen.rs  select_amount_screen.rs  splash_screen.rs  standby_screen.rs
src/ui/: components.rs  theme.rs
src/ui/screens/: charging.rs  complete.rs  error.rs  home.rs  mod.rs  payment.rs
