[package]
name = "ev-charger"
version = "0.1.0"
edition = "2021"  # 2024는 아직 안정적이지 않음
authors = ["Your Name <your.email@example.com>"]
description = "EV 충전기 키오스크 애플리케이션"
license = "MIT"

[dependencies]
# UI
egui = "0.32"
eframe = { version = "0.32", default-features = false, features = [
    "accesskit", "default_fonts", "glow", "persistence"
] }

# 비동기 런타임
tokio = { version = "1.0", features = ["full"] }

# 에러 처리 (2025년 표준)
anyhow = "1.0"
thiserror = "1.0"

# 직렬화
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# 로깅 (2025년 표준)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 시간 처리
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# 설정 관리
config = "0.13"

# HTTP 클라이언트 (외부 API용)
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
# 테스트
tokio-test = "0.4"

[features]
default = []
# 하드웨어 인터페이스 (임베디드 환경용)
hardware = []
# 개발 모드 기능들
dev = []
